update some theme settings

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -45,7 +45,7 @@
                     <div class="intro-text">
                         <span class="name">Code Skull</span>
                         <hr/>
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Learn how to code!</span>
                     </div>
                 </div>
             </div>
