--- a/app/assets/stylesheets/freelancer.css.scss
+++ b/app/assets/stylesheets/freelancer.css.scss
@@ -319,7 +319,7 @@ section.success a.active {
     transition: top .3s ease,opacity .3s ease;
 }
 
-.floating-label-form-group::not(:first-child) {
+.floating-label-form-group:not(:first-child) {
     padding-left: 14px;
     border-left: 1px solid #eee;
 }
@@ -356,7 +356,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #233140;
+    background-color: black;
 }
 
 .btn-social {
