--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head>  
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <%= csrf_meta_tags %>
-    <title>Dashboard</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %> 
+    <title>Code Skull</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   </head>
-  <body>
-  	<%= yield %>
-  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <body class="devise">
+    <%= render 'layouts/navbar' %>
+    <%= yield %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </body>
 </html>
