--- a/app/views/dashboard/index.html
+++ b/app/views/dashboard/index.html
@@ -1,1 +1,3 @@
 <h1>Dashboard</h1>
+<h4>Olá <%= current_user.fullname %></h4>
+<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>    
