--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <%= csrf_meta_tags %>
-
-  <title>Codeskull</title>
-
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  
-</head>
-
-<body id="page-top" class="index">
-	<%= yield %>
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-</body>
-
+  <head>  
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <%= csrf_meta_tags %>
+    <title>Codeskull</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  </head>
+  <body id="page-top" class="index">
+    <%= render 'layouts/navbar' %>
+  	<%= yield %>
+  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  </body>
 </html>
