Update views names and layouts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   </head>
   <body id="page-top" class="index">
-    <%= render 'layouts/navbar' %>
+    <%= render 'welcome/navbar' %>
   	<%= yield %>
   	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </body>
