--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -10,7 +10,8 @@
     <title>Dashboard</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %> 
   </head>
-  <body>
+  <body id="page-top" class="index">
+    <%= render 'dashboard/navbar' %>
   	<%= yield %>
   	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   </body>
