--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -1,17 +1,17 @@
-<nav class="navbar navbar-fixed-top">
+<nav class="navbar navbar-white navbar-fixed-top">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <div class="navbar-header page-scroll col-md-3">
             <a class="navbar-brand" href="/"><%= t('name') %></a>
         </div>
 
-        <div>
-            <ul class="nav navbar-nav navbar-right">
+        <div class="navbar-header page-scroll col-md-8">
+            <form class="search-nav">
+                <input type="text" name="" placeholder="🔍 Pesquise por cursos...">
+            </form>
+        </div>
+        <div class="navbar-header page-scroll col-md-1">
+            <ul>
                 <li>
                     <a class="navbar-brand" href="/">
                         <img src="http://cdn0.vox-cdn.com/images/verge/default-avatar.v9899025.gif" style="width: auto; height: auto;max-width: 30px;max-height: 25px" />
