Update users and track edition

--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -5,20 +5,20 @@
             <a class="navbar-brand" href="/"><%= t('name') %></a>
         </div>
 
-        <div class="navbar-header page-scroll col-md-8">
+        <div class="navbar-header page-scroll col-md-9">
             <form class="search-nav">
                 <input type="text" name="" placeholder="🔍 Pesquise por cursos...">
             </form>
         </div>
-        <div class="navbar-header page-scroll col-md-1">
-            <ul>
+           <!-- <div class="navbar-header page-scroll col-md-1">
+           <ul>
                 <li>
                     <a class="navbar-brand" href="/">
                         <img src="http://cdn0.vox-cdn.com/images/verge/default-avatar.v9899025.gif" style="width: auto; height: auto;max-width: 30px;max-height: 25px" />
                     </a>
                 </li>
             </ul>
-        </div>
+        </div>  -->
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
