--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,12 +10,16 @@
 			--> 
 			<div class="col-md-3">
 
+				<div class="profile-picture">
+					<img src="http://cdn0.vox-cdn.com/images/verge/default-avatar.v9899025.gif" style="width: auto; height: auto;" />
+				</div>
+
+
+
 				<ul class="menu">
+					<li><%= link_to "EDITAR PERFIL", edit_user_registration_path %></li>
 					<li><a href="#">CADASTRAR CURSO</a></li>
-					<li><a href="#">CADASTRAR CURSO</a></li>
-					<li><a href="#">CADASTRAR CURSO</a></li>
-					<li><a href="#">CADASTRAR CURSO</a></li>
-					<li><a href="#">CADASTRAR CURSO</a></li>
+					<li><a href="#">MEUS CURSOS</a></li>
 				</ul>
 
 			</div>
