--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,15 +1,19 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<h2><%= t('edit') %> <%= t('profile') %></h2>
+<hr/>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+  <div class="form-group">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar %>
+  </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :fullname %><br />
     <%= f.text_field :fullname, autofocus: true %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email %>
   </div>
@@ -19,18 +23,18 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div class="form-group">
+    <%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <div class="form-group">
+    <%= f.label :current_password %><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
@@ -38,6 +42,8 @@
     <%= f.submit "Update" %>
   </div>
 <% end %>
+
+<hr/>
 
 <h3>Cancel my account</h3>
 
