--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -1,25 +1,20 @@
 <nav class="navbar navbar-white navbar-fixed-top">
     <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll col-md-3">
+        <div class="navbar-header page-scroll col-md-3 col-sm-3">
             <a class="navbar-brand" href="/"><%= t('name') %></a>
         </div>
-
-        <div class="navbar-header page-scroll col-md-9">
+        <div class="navbar-header page-scroll col-md-8 col-sm-8">
             <form class="search-nav">
                 <input type="text" name="" placeholder="🔍 Pesquise por cursos...">
             </form>
         </div>
-           <!-- <div class="navbar-header page-scroll col-md-1">
+        <div class="navbar-header page-scroll col-md-1 col-sm-1">
            <ul>
-                <li>
-                    <a class="navbar-brand" href="/">
-                        <img src="http://cdn0.vox-cdn.com/images/verge/default-avatar.v9899025.gif" style="width: auto; height: auto;max-width: 30px;max-height: 25px" />
+                <li style="margin: 20%;">
+                    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
                     </a>
                 </li>
             </ul>
-        </div>  -->
-        <!-- /.navbar-collapse -->
+        </div>  
     </div>
-    <!-- /.container-fluid -->
 </nav>
