--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   </head>
   <body class="devise">
-    <%= render 'dashboard/navbar' %>
+    <%= render 'users/navbar' %>
     <section>
       <div class="container">
         <div class="row">
