--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,3 +1,8 @@
+<h2>ULTIMOS CURSOS</h2>
+<hr/>
 <% tracks.each do |track| %>
-	<h3><%= track.title %></h3>
+<div class="col-md-3">
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/1024px-Ruby_logo.svg.png" style="width: 100%;" />
+	<a href="#"><h5><%= track.title %></h5></a>
+</div>
 <% end %>
