--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -10,7 +10,7 @@
     <title>Code Skull</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   </head>
-  <body class="devise">
+  <body class="form-view">
     <%= render 'users/navbar' %>
     <section>
       <div class="container">
