--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,7 +10,7 @@
 
 				<ul class="menu">
 					<li><%= link_to "EDITAR PERFIL", edit_user_registration_path %></li>
-					<li><a href="#">CADASTRAR CURSO</a></li>
+					<li><%= link_to "CADASTRAR CURSO", new_track_path %></a></li>
 					<li><a href="#">MEUS CURSOS</a></li>
 				</ul>
 			</div>
