--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -5,7 +5,7 @@
 		<% if !track.contents.first.nil? %>
 			<img src="<%= track.contents.first.file.url(:thumb) %>" style="width: 100%; max-height: 180px;" />
 		<% else %> 
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/1024px-Ruby_logo.svg.png" style="width: 100%;max-height: 180px;" />
+			<img src="/track_thumb.png" style="width: 100%;max-height: 180px;" />
 		<% end %>
 		<a href="<%= track_url(track) %>"><h5><%= track.title %></h5></a>
 	</div>
