--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,11 +7,10 @@
 				<div class="profile-picture">
 					<img src="<%= current_user.avatar.url %>" style="width: 100%; height: auto;"  title="Olá <%= current_user.fullname %>" />
 				</div>
-
 				<ul class="menu">
-					<li><%= link_to "EDITAR PERFIL", edit_user_registration_path %></li>
-					<li><%= link_to "CADASTRAR CURSO", new_track_path %></a></li>
-					<li><a href="#">MEUS CURSOS</a></li>
+					<li><i class="fa fa-pencil" aria-hidden="true"></i><%= link_to " EDITAR PERFIL", edit_user_registration_path %></li>
+					<li><i class="fa fa-plus" aria-hidden="true"></i><%= link_to " CADASTRAR CURSO", new_track_path %></a></li>
+					<li><i class="fa fa-book" aria-hidden="true"></i><a href="#"> MEUS CURSOS</a></li>
 				</ul>
 			</div>
 			<div class="col-md-9 col-sm-9">
