--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -2,17 +2,23 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h1><%= track.title %></h1>
+			<p><small>Autor: <%= track.user.fullname %></small><p>
+
 			<p class="text-justify"><%= track.description %></p>
 		</div>
 		<div col-md-6>
-			<h3>Conteúdos</h3>
-			<div class="row">
-				<% track.contents.each do |content|%>
-					<a href="<%= content.file.url %>" data-toggle="lightbox" data-gallery="multiimages" data-title="<%= content.file.name %>" class="col-sm-1 thumb">
-                                    <img src="<%= content.file.url(:thumb) %>" class="img-responsive">
-                    </a>
-                <% end %>
+			<% if track.contents.any? %>
+			<div>
+				<h3>Conteúdos</h3>
+				<div class="row">
+					<% track.contents.each do |content|%>
+						<a href="<%= content.file.url %>" data-toggle="lightbox" data-gallery="multiimages" data-title="<%= content.file.name %>" class="col-sm-1 thumb">
+	                                    <img src="<%= content.file.url(:thumb) %>" class="img-responsive">
+	                    </a>
+	                <% end %>
+	            </div>
             </div>
+            <% end %>
 		</div>
 	</div>
 </section>
