--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -2,11 +2,13 @@
 <hr/>
 <% tracks.each do |track| %>
 	<div class="col-md-3">
-		<% if !track.contents.first.nil? %>
-			<img src="<%= track.contents.first.file.url(:thumb) %>" style="width: 100%; max-height: 180px;" />
-		<% else %> 
-			<img src="/track_thumb.png" style="width: 100%;max-height: 180px;" />
-		<% end %>
+		<div style="height: 180px; overflow: hidden;">
+			<% if !track.contents.first.nil? %>
+				<img src="<%= track.contents.first.file.url %>" style="height:100%;" />
+			<% else %> 
+				<img src="/track_thumb.png" style="width: 100%;" />
+			<% end %>
+		</div>
 		<a href="<%= track_url(track) %>"><h5><%= track.title %></h5></a>
 	</div>
 <% end %>
