Modify users tracks relationship to m - n, and create tasks

--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,6 +1,6 @@
 <h2>ULTIMOS CURSOS</h2>
 <hr/>
-<% tracks.each do |track| %>
+<% tracks&.each do |track| %>
 	<div class="col-md-3">
 		<div style="height: 180px; overflow: hidden;">
 			<% if !track.contents.first.nil? %>
