--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h1><%= track.title %></h1>
-			<p><small>Autor: <%= track.user.fullname %></small><p>
+			<p><small>Autor: <%= track.users.first&.fullname %></small><p>
 
 			<p class="text-justify"><%= track.description %></p>
 		</div>
